@@ -21,24 +21,11 @@
 
 package io.crate.planner;
 
-import static io.crate.planner.operators.LogicalPlannerTest.isPlan;
-import static io.crate.testing.Asserts.assertThrowsMatches;
+import static io.crate.testing.Asserts.assertThat;
 import static io.crate.testing.Asserts.isReference;
 import static java.util.Collections.singletonList;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.hamcrest.Matchers.contains;
-import static org.hamcrest.Matchers.equalTo;
-import static org.hamcrest.Matchers.instanceOf;
-import static org.hamcrest.Matchers.is;
-import static org.hamcrest.Matchers.not;
-import static org.hamcrest.Matchers.notNullValue;
-import static org.hamcrest.Matchers.nullValue;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertThat;
-import static org.junit.Assert.assertTrue;
 
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
@@ -46,7 +33,6 @@ import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
-import org.hamcrest.Matchers;
 import org.junit.Test;
 
 import com.carrotsearch.hppc.IntIndexedContainer;
@@ -97,7 +83,6 @@ import io.crate.planner.operators.LogicalPlan;
 import io.crate.statistics.Stats;
 import io.crate.statistics.TableStats;
 import io.crate.test.integration.CrateDummyClusterServiceUnitTest;
-import io.crate.testing.Asserts;
 import io.crate.testing.SQLExecutor;
 import io.crate.testing.T3;
 import io.crate.types.DataTypes;
@@ -118,8 +103,8 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
             .build();
 
         ExecutionPlan plan = e.plan("select * from users where id in (1, 2, 3) and match(text, 'Hello')");
-        assertThat(plan, instanceOf(Merge.class));
-        assertThat(((Merge) plan).subPlan(), instanceOf(Collect.class));
+        assertThat(plan).isExactlyInstanceOf(Merge.class);
+        assertThat(((Merge) plan).subPlan()).isExactlyInstanceOf(Collect.class);
     }
 
     @Test
@@ -129,8 +114,8 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
             .build();
 
         LogicalPlan plan = e.logicalPlan("select name from users where id = 1");
-        assertThat(plan, isPlan(
-            "Get[doc.users | name | DocKeys{1::bigint} | (id = 1::bigint)]"));
+        assertThat(plan).isEqualTo(
+            "Get[doc.users | name | DocKeys{1::bigint} | (id = 1::bigint)]");
     }
 
     @Test
@@ -140,8 +125,8 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
             .build();
 
         LogicalPlan plan = e.logicalPlan("select name from users where _id = 1");
-        assertThat(plan, isPlan(
-            "Get[doc.users | name | DocKeys{1} | (_cast(_id, 'integer') = 1)]"));
+        assertThat(plan).isEqualTo(
+            "Get[doc.users | name | DocKeys{1} | (_cast(_id, 'integer') = 1)]");
     }
 
     @Test
@@ -151,8 +136,8 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
             .build();
 
         LogicalPlan plan = e.logicalPlan("select name from users where id = 1 and _version = 1");
-        assertThat(plan, isPlan(
-            "Get[doc.users | name | DocKeys{1::bigint, 1::bigint} | ((id = 1::bigint) AND (_version = 1::bigint))]"));
+        assertThat(plan).isEqualTo(
+            "Get[doc.users | name | DocKeys{1::bigint, 1::bigint} | ((id = 1::bigint) AND (_version = 1::bigint))]");
     }
 
     @Test
@@ -166,9 +151,9 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
             .build();
 
         LogicalPlan plan = e.logicalPlan("select name from bystring where name = 'one'");
-        assertThat(plan, isPlan(
+        assertThat(plan).isEqualTo(
             "Get[doc.bystring | name | DocKeys{'one'} | (name = 'one')]"
-        ));
+        );
     }
 
     @Test
@@ -182,9 +167,9 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
             .build();
 
         LogicalPlan plan = e.logicalPlan("select name, date from parted_pks where id = 1 and date = 0");
-        assertThat(plan, isPlan(
+        assertThat(plan).isEqualTo(
             "Get[doc.parted_pks | name, date | DocKeys{1, 0::bigint} | ((id = 1) AND (date = 0::bigint))]"
-        ));
+        );
     }
 
     @Test
@@ -194,9 +179,9 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
             .build();
 
         LogicalPlan plan = e.logicalPlan("select name from users where id in (1, 2)");
-        assertThat(plan, isPlan(
+        assertThat(plan).isEqualTo(
             "Get[doc.users | name | DocKeys{1::bigint; 2::bigint} | (id = ANY([1::bigint, 2::bigint]))]"
-        ));
+        );
     }
 
     @Test
@@ -209,16 +194,16 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
         Collect collect = (Collect) globalAggregate.subPlan();
         RoutedCollectPhase collectPhase = ((RoutedCollectPhase) collect.collectPhase());
 
-        assertEquals(CountAggregation.LongStateType.INSTANCE, collectPhase.outputTypes().get(0));
-        assertThat(collectPhase.maxRowGranularity(), is(RowGranularity.DOC));
-        assertThat(collectPhase.projections().size(), is(1));
-        assertThat(collectPhase.projections().get(0), instanceOf(AggregationProjection.class));
-        assertThat(collectPhase.projections().get(0).requiredGranularity(), is(RowGranularity.SHARD));
+        assertThat(collectPhase.outputTypes().get(0)).isEqualTo(CountAggregation.LongStateType.INSTANCE);
+        assertThat(collectPhase.maxRowGranularity()).isEqualTo(RowGranularity.DOC);
+        assertThat(collectPhase.projections()).hasSize(1);
+        assertThat(collectPhase.projections().get(0)).isExactlyInstanceOf(AggregationProjection.class);
+        assertThat(collectPhase.projections().get(0).requiredGranularity()).isEqualTo(RowGranularity.SHARD);
 
         MergePhase mergePhase = globalAggregate.mergePhase();
 
-        assertEquals(CountAggregation.LongStateType.INSTANCE, mergePhase.inputTypes().iterator().next());
-        assertEquals(DataTypes.LONG, mergePhase.outputTypes().get(0));
+        assertThat(mergePhase.inputTypes().iterator().next()).isEqualTo(CountAggregation.LongStateType.INSTANCE);
+        assertThat(mergePhase.outputTypes().get(0)).isEqualTo(DataTypes.LONG);
     }
 
     @Test
@@ -232,15 +217,14 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
         Collect collect = (Collect) merge.subPlan();
         RoutedCollectPhase collectPhase = ((RoutedCollectPhase) collect.collectPhase());
 
-        assertEquals(DataTypes.INTEGER, collectPhase.outputTypes().get(0));
-        assertThat(collectPhase.maxRowGranularity(), is(RowGranularity.SHARD));
+        assertThat(collectPhase.outputTypes().get(0)).isEqualTo(DataTypes.INTEGER);
+        assertThat(collectPhase.maxRowGranularity()).isEqualTo(RowGranularity.SHARD);
 
-        assertThat(collectPhase.orderBy(), notNullValue());
+        assertThat(collectPhase.orderBy()).isNotNull();
 
         List<Projection> projections = collectPhase.projections();
-        assertThat(projections, contains(
-            instanceOf(LimitAndOffsetProjection.class)
-        ));
+        assertThat(projections).satisfiesExactly(
+            p -> assertThat(p).isExactlyInstanceOf(LimitAndOffsetProjection.class));
     }
 
     @Test
@@ -252,14 +236,14 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
         QueryThenFetch qtf = e.plan("select name from users where name = 'x' order by id limit 10");
         Merge merge = (Merge) qtf.subPlan();
         RoutedCollectPhase collectPhase = ((RoutedCollectPhase) ((Collect) merge.subPlan()).collectPhase());
-        assertThat(collectPhase.where().toString(), is("(name = 'x')"));
+        assertThat(collectPhase.where()).hasToString("(name = 'x')");
 
         LimitAndOffsetProjection limitAndOffsetProjection = (LimitAndOffsetProjection) collectPhase.projections().get(0);
-        assertThat(limitAndOffsetProjection.limit(), is(10));
+        assertThat(limitAndOffsetProjection.limit()).isEqualTo(10);
 
         MergePhase mergePhase = merge.mergePhase();
-        assertThat(mergePhase.outputTypes().size(), is(1));
-        assertEquals(DataTypes.STRING, mergePhase.outputTypes().get(0));
+        assertThat(mergePhase.outputTypes()).hasSize(1);
+        assertThat(mergePhase.outputTypes().get(0)).isEqualTo(DataTypes.STRING);
     }
 
     @Test
@@ -273,18 +257,18 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
         Merge merge = e.plan("select name from users where name = 'x' order by name limit 10");
         Collect collect = (Collect) merge.subPlan();
         RoutedCollectPhase collectPhase = ((RoutedCollectPhase) collect.collectPhase());
-        assertThat(collectPhase.where().toString(), is("(name = 'x')"));
+        assertThat(collectPhase.where().toString()).isEqualTo("(name = 'x')");
 
         MergePhase mergePhase = merge.mergePhase();
-        assertThat(mergePhase.outputTypes().size(), is(1));
-        assertEquals(DataTypes.STRING, mergePhase.outputTypes().get(0));
+        assertThat(mergePhase.outputTypes()).hasSize(1);
+        assertThat(mergePhase.outputTypes().get(0)).isEqualTo(DataTypes.STRING);
 
-        assertTrue(mergePhase.finalProjection().isPresent());
+        assertThat(mergePhase.finalProjection().isPresent()).isTrue();
 
         Projection lastProjection = mergePhase.finalProjection().get();
-        assertThat(lastProjection, instanceOf(LimitAndOffsetProjection.class));
+        assertThat(lastProjection).isExactlyInstanceOf(LimitAndOffsetProjection.class);
         LimitAndOffsetProjection limitAndOffsetProjection = (LimitAndOffsetProjection) lastProjection;
-        assertThat(limitAndOffsetProjection.outputs().size(), is(1));
+        assertThat(limitAndOffsetProjection.outputs()).hasSize(1);
     }
 
     @Test
@@ -296,26 +280,26 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
         QueryThenFetch qtf = e.plan("select name from users limit 100000");
         Merge merge = (Merge) qtf.subPlan();
         RoutedCollectPhase collectPhase = ((RoutedCollectPhase) ((Collect) merge.subPlan()).collectPhase());
-        assertThat(collectPhase.nodePageSizeHint(), is(100_000));
+        assertThat(collectPhase.nodePageSizeHint()).isEqualTo(100_000);
 
         MergePhase mergePhase = merge.mergePhase();
-        assertThat(mergePhase.projections().size(), is(2));
+        assertThat(mergePhase.projections()).hasSize(2);
         LimitAndOffsetProjection projection = (LimitAndOffsetProjection) mergePhase.projections().get(0);
-        assertThat(projection.limit(), is(100_000));
-        assertThat(projection.offset(), is(0));
+        assertThat(projection.limit()).isEqualTo(100_000);
+        assertThat(projection.offset()).isEqualTo(0);
 
         // with offset
         qtf = e.plan("select name from users limit 100000 offset 20");
         merge = ((Merge) qtf.subPlan());
 
         collectPhase = ((RoutedCollectPhase) ((Collect) merge.subPlan()).collectPhase());
-        assertThat(collectPhase.nodePageSizeHint(), is(100_000 + 20));
+        assertThat(collectPhase.nodePageSizeHint()).isEqualTo(100_000 + 20);
 
         mergePhase = merge.mergePhase();
-        assertThat(mergePhase.projections().size(), is(2));
+        assertThat(mergePhase.projections()).hasSize(2);
         projection = (LimitAndOffsetProjection) mergePhase.projections().get(0);
-        assertThat(projection.limit(), is(100_000));
-        assertThat(projection.offset(), is(20));
+        assertThat(projection.limit()).isEqualTo(100_000);
+        assertThat(projection.offset()).isEqualTo(20);
     }
 
 
@@ -338,14 +322,17 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
         for (Map.Entry<String, Map<String, IntIndexedContainer>> entry : locations.entrySet()) {
             indices.addAll(entry.getValue().keySet());
         }
-        assertThat(indices, Matchers.containsInAnyOrder(
-            new PartitionName(new RelationName("doc", "parted_pks"), Arrays.asList("1395874800000")).asIndexName(),
-            new PartitionName(new RelationName("doc", "parted_pks"), Arrays.asList("1395961200000")).asIndexName()));
+        assertThat(indices).satisfiesExactlyInAnyOrder(
+            i -> assertThat(i).isEqualTo(
+                new PartitionName(new RelationName("doc", "parted_pks"), List.of("1395874800000")).asIndexName()),
+            i -> assertThat(i).isEqualTo(
+                new PartitionName(new RelationName("doc", "parted_pks"), List.of("1395961200000")).asIndexName())
+        );
 
-        assertThat(collectPhase.where().toString(), is("(name = 'x')"));
+        assertThat(collectPhase.where().toString()).isEqualTo("(name = 'x')");
 
         MergePhase mergePhase = merge.mergePhase();
-        assertThat(mergePhase.outputTypes().size(), is(3));
+        assertThat(mergePhase.outputTypes()).hasSize(3);
     }
 
     @Test
@@ -358,12 +345,12 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
         Merge merge = (Merge) qtf.subPlan();
         RoutedCollectPhase collectPhase = ((RoutedCollectPhase) ((Collect) merge.subPlan()).collectPhase());
 
-        assertThat(collectPhase.where().toString(), is("(name = 'x')"));
+        assertThat(collectPhase.where()).hasToString("(name = 'x')");
 
         MergePhase mergePhase = merge.mergePhase();
-        assertThat(mergePhase.outputTypes().size(), is(2));
-        assertEquals(DataTypes.STRING, mergePhase.outputTypes().get(0));
-        assertEquals(DataTypes.STRING, mergePhase.outputTypes().get(1));
+        assertThat(mergePhase.outputTypes()).hasSize(2);
+        assertThat(mergePhase.outputTypes().get(0)).isEqualTo(DataTypes.STRING);
+        assertThat(mergePhase.outputTypes().get(1)).isEqualTo(DataTypes.STRING);
     }
 
     @Test
@@ -377,25 +364,25 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
 
         RoutedCollectPhase collectPhase = ((RoutedCollectPhase) collect.collectPhase());
         Projection projection = collectPhase.projections().get(0);
-        assertThat(projection, instanceOf(AggregationProjection.class));
+        assertThat(projection).isExactlyInstanceOf(AggregationProjection.class);
         AggregationProjection aggregationProjection = (AggregationProjection) projection;
-        assertThat(aggregationProjection.aggregations().size(), is(1));
-        assertThat(aggregationProjection.mode(), is(AggregateMode.ITER_PARTIAL));
+        assertThat(aggregationProjection.aggregations()).hasSize(1);
+        assertThat(aggregationProjection.mode()).isEqualTo(AggregateMode.ITER_PARTIAL);
 
         Aggregation aggregation = aggregationProjection.aggregations().get(0);
         Symbol aggregationInput = aggregation.inputs().get(0);
-        assertThat(aggregationInput.symbolType(), is(SymbolType.INPUT_COLUMN));
+        assertThat(aggregationInput.symbolType()).isEqualTo(SymbolType.INPUT_COLUMN);
 
-        assertThat(collectPhase.toCollect().get(0), instanceOf(Reference.class));
-        assertThat(((Reference) collectPhase.toCollect().get(0)).column().name(), is("name"));
+        assertThat(collectPhase.toCollect().get(0)).isInstanceOf(Reference.class);
+        assertThat(((Reference) collectPhase.toCollect().get(0)).column().name()).isEqualTo("name");
 
         MergePhase mergePhase = globalAggregate.mergePhase();
-        assertThat(mergePhase.projections().size(), is(2));
+        assertThat(mergePhase.projections()).hasSize(2);
         Projection projection1 = mergePhase.projections().get(1);
 
-        assertThat(projection1, instanceOf(EvalProjection.class));
+        assertThat(projection1).isExactlyInstanceOf(EvalProjection.class);
         Symbol collection_count = projection1.outputs().get(0);
-        assertThat(collection_count, instanceOf(Function.class));
+        assertThat(collection_count).isExactlyInstanceOf(Function.class);
     }
 
     @Test
@@ -408,27 +395,27 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
             "select avg(date) from users having min(date) > '1970-01-01'");
         Collect collect = (Collect) globalAggregate.subPlan();
         RoutedCollectPhase collectPhase = ((RoutedCollectPhase) collect.collectPhase());
-        assertThat(collectPhase.projections().size(), is(1));
-        assertThat(collectPhase.projections().get(0), instanceOf(AggregationProjection.class));
+        assertThat(collectPhase.projections()).hasSize(1);
+        assertThat(collectPhase.projections().get(0)).isExactlyInstanceOf(AggregationProjection.class);
 
         MergePhase localMergeNode = globalAggregate.mergePhase();
 
-        assertThat(localMergeNode.projections(), contains(
-            instanceOf(AggregationProjection.class),
-            instanceOf(FilterProjection.class),
-            instanceOf(EvalProjection.class)));
+        assertThat(localMergeNode.projections()).satisfiesExactly(
+            p -> assertThat(p).isExactlyInstanceOf(AggregationProjection.class),
+            p -> assertThat(p).isExactlyInstanceOf(FilterProjection.class),
+            p -> assertThat(p).isExactlyInstanceOf(EvalProjection.class));
 
         AggregationProjection aggregationProjection = (AggregationProjection) localMergeNode.projections().get(0);
-        assertThat(aggregationProjection.aggregations().size(), is(2));
+        assertThat(aggregationProjection.aggregations()).hasSize(2);
 
         FilterProjection filterProjection = (FilterProjection) localMergeNode.projections().get(1);
-        assertThat(filterProjection.outputs().size(), is(2));
-        assertThat(filterProjection.outputs().get(0), instanceOf(InputColumn.class));
+        assertThat(filterProjection.outputs()).hasSize(2);
+        assertThat(filterProjection.outputs().get(0)).isExactlyInstanceOf(InputColumn.class);
         InputColumn inputColumn = (InputColumn) filterProjection.outputs().get(0);
-        assertThat(inputColumn.index(), is(0));
+        assertThat(inputColumn.index()).isEqualTo(0);
 
         EvalProjection evalProjection = (EvalProjection) localMergeNode.projections().get(2);
-        assertThat(evalProjection.outputs().size(), is(1));
+        assertThat(evalProjection.outputs()).hasSize(1);
     }
 
     @Test
@@ -451,11 +438,8 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
         assertThat(
             plan.countPhase().routing().locations().entrySet().stream()
                 .flatMap(x -> x.getValue().keySet().stream())
-                .collect(Collectors.toSet()),
-            Matchers.contains(
-                is(".partitioned.parted.04732cpp6ks3ed1o60o30c1g")
-            )
-        );
+                .collect(Collectors.toSet()))
+            .containsExactly(".partitioned.parted.04732cpp6ks3ed1o60o30c1g");
     }
 
     @Test(expected = UnsupportedOperationException.class)
@@ -541,10 +525,8 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
             routing.locations().values()
                 .stream()
                 .flatMap(shardsByIndex -> shardsByIndex.keySet().stream())
-                .collect(Collectors.toSet()),
-            contains(
-                is(".partitioned.parted.04732cpp6ksjcc9i60o30c1g")
-            ));
+                .collect(Collectors.toSet()))
+            .containsExactly(".partitioned.parted.04732cpp6ksjcc9i60o30c1g");
     }
 
     @Test
@@ -554,8 +536,8 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
             .build();
 
         Merge merge = e.plan("select min(name) from users having 1 = 2");
-        assertThat(merge.mergePhase().projections().get(1), instanceOf(FilterProjection.class));
-        Asserts.assertThat(((FilterProjection) merge.mergePhase().projections().get(1)).query()).isSQL("false");
+        assertThat(merge.mergePhase().projections().get(1)).isExactlyInstanceOf(FilterProjection.class);
+        assertThat(((FilterProjection) merge.mergePhase().projections().get(1)).query()).isSQL("false");
     }
 
     @Test
@@ -568,7 +550,7 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
         Collect collect = (Collect) merge.subPlan();
         int shardQueueSize = ((RoutedCollectPhase) collect.collectPhase()).shardQueueSize(
             collect.collectPhase().nodeIds().iterator().next());
-        assertThat(shardQueueSize, is(375));
+        assertThat(shardQueueSize).isEqualTo(375);
     }
 
     @Test
@@ -578,10 +560,10 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
             .build();
 
         Merge plan = e.plan("select name from users order by name limit 1000000");
-        assertThat(plan.mergePhase().nodeIds().size(), is(1)); // mergePhase with executionNode = paging enabled
+        assertThat(plan.mergePhase().nodeIds()).hasSize(1); // mergePhase with executionNode = paging enabled
 
         Collect collect = (Collect) plan.subPlan();
-        assertThat(((RoutedCollectPhase) collect.collectPhase()).nodePageSizeHint(), is(750000));
+        assertThat(((RoutedCollectPhase) collect.collectPhase()).nodePageSizeHint()).isEqualTo(750000);
     }
 
     @Test
@@ -592,8 +574,8 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
 
         Merge merge = e.plan("select name from users order by name limit 10 offset 1000000");
         Collect collect = (Collect) merge.subPlan();
-        assertThat(merge.mergePhase().nodeIds().size(), is(1)); // mergePhase with executionNode = paging enabled
-        assertThat(((RoutedCollectPhase) collect.collectPhase()).nodePageSizeHint(), is(750007));
+        assertThat(merge.mergePhase().nodeIds()).hasSize(1); // mergePhase with executionNode = paging enabled
+        assertThat(((RoutedCollectPhase) collect.collectPhase()).nodePageSizeHint()).isEqualTo(750007);
     }
 
     @Test
@@ -605,8 +587,8 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
         QueryThenFetch qtf = e.plan("select name, date from users order by name limit 1000000");
         Merge merge = (Merge) qtf.subPlan();
         RoutedCollectPhase collectPhase = ((RoutedCollectPhase) ((Collect) merge.subPlan()).collectPhase());
-        assertThat(merge.mergePhase().nodeIds().size(), is(1)); // mergePhase with executionNode = paging enabled
-        assertThat(collectPhase.nodePageSizeHint(), is(750000));
+        assertThat(merge.mergePhase().nodeIds()).hasSize(1); // mergePhase with executionNode = paging enabled
+        assertThat(collectPhase.nodePageSizeHint()).isEqualTo(750000);
     }
 
     @Test
@@ -615,8 +597,8 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
             .build();
 
         Collect collect = e.plan("select * from unnest([1, 2], ['Arthur', 'Trillian'])");
-        assertNotNull(collect);
-        Asserts.assertThat(collect.collectPhase().toCollect()).satisfiesExactly(isReference("col1"), isReference("col2"));
+        assertThat(collect).isNotNull();
+        assertThat(collect.collectPhase().toCollect()).satisfiesExactly(isReference("col1"), isReference("col2"));
     }
 
     @Test
@@ -629,15 +611,16 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
                                  "  select i + i as ii, xx from (" +
                                  "    select i, sum(x) as xx from t1 group by i) as t) as tt " +
                                  "where (ii * 2) > 4 and (xx * 2) > 120");
-        assertThat("would require merge with more than 1 nodeIds", collect.nodeIds().size(), is(1));
+        assertThat(collect.nodeIds())
+            .as("would require merge with more than 1 nodeIds")
+            .hasSize(1);
         List<Projection> projections = collect.collectPhase().projections();
-        assertThat(projections, contains(
-            instanceOf(GroupProjection.class), // parallel on shard-level
-            instanceOf(GroupProjection.class), // node-level
-            instanceOf(EvalProjection.class),
-            instanceOf(FilterProjection.class),
-            instanceOf(EvalProjection.class)
-        ));
+        assertThat(projections).satisfiesExactly(
+            p -> assertThat(p).isExactlyInstanceOf(GroupProjection.class), // parallel on shard-level
+            p -> assertThat(p).isExactlyInstanceOf(GroupProjection.class), // node-level
+            p -> assertThat(p).isExactlyInstanceOf(EvalProjection.class),
+            p -> assertThat(p).isExactlyInstanceOf(FilterProjection.class),
+            p -> assertThat(p).isExactlyInstanceOf(EvalProjection.class));
     }
 
     @Test
@@ -664,16 +647,15 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
                                     "  and u2.name = u1.name");
         Join innerNl = (Join) outerNl.left();
 
-        Asserts.assertThat(innerNl.joinPhase().joinCondition()).isSQL("((INPUT(0) = INPUT(2)) AND (INPUT(1) = INPUT(3)))");
-        assertThat(innerNl.joinPhase().projections().size(), is(1));
-        assertThat(innerNl.joinPhase().projections().get(0), instanceOf(EvalProjection.class));
+        assertThat(innerNl.joinPhase().joinCondition()).isSQL("((INPUT(0) = INPUT(2)) AND (INPUT(1) = INPUT(3)))");
+        assertThat(innerNl.joinPhase().projections()).hasSize(1);
+        assertThat(innerNl.joinPhase().projections().get(0)).isExactlyInstanceOf(EvalProjection.class);
 
-        assertThat(outerNl.joinPhase().joinCondition(), nullValue());
-        assertThat(outerNl.joinPhase().projections().size(), is(2));
-        assertThat(outerNl.joinPhase().projections(), contains(
-            instanceOf(EvalProjection.class),
-            instanceOf(EvalProjection.class)
-        ));
+        assertThat(outerNl.joinPhase().joinCondition()).isNull();
+        assertThat(outerNl.joinPhase().projections()).hasSize(2);
+        assertThat(outerNl.joinPhase().projections()).satisfiesExactly(
+            p -> assertThat(p).isExactlyInstanceOf(EvalProjection.class),
+            p -> assertThat(p).isExactlyInstanceOf(EvalProjection.class));
     }
 
     @Test
@@ -693,9 +675,9 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
                                     "where u2.name = 'Arthur'" +
                                     "and u2.id > 1 ");
         Join nl = (Join) merge.subPlan();
-        assertThat(nl.joinPhase().joinType(), is(JoinType.INNER));
+        assertThat(nl.joinPhase().joinType()).isEqualTo(JoinType.INNER);
         Collect rightCM = (Collect) nl.right();
-        Asserts.assertThat(((RoutedCollectPhase) rightCM.collectPhase()).where())
+        assertThat(((RoutedCollectPhase) rightCM.collectPhase()).where())
             .isSQL("((doc.users.name = 'Arthur') AND (doc.users.id > 1::bigint))");
     }
 
@@ -709,7 +691,7 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
         Merge merge = e.plan("select id from sys.shards");
         Collect collect = (Collect) merge.subPlan();
         RoutedCollectPhase collectPhase = ((RoutedCollectPhase) collect.collectPhase());
-        assertThat(collectPhase.maxRowGranularity(), is(RowGranularity.SHARD));
+        assertThat(collectPhase.maxRowGranularity()).isEqualTo(RowGranularity.SHARD);
     }
 
     @Test
@@ -720,10 +702,10 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
 
         CountPlan plan = e.plan("select count(*) from users");
 
-        assertThat(plan.countPhase().where(), equalTo(Literal.BOOLEAN_TRUE));
+        assertThat(plan.countPhase().where()).isEqualTo(Literal.BOOLEAN_TRUE);
 
-        assertThat(plan.mergePhase().projections().size(), is(1));
-        assertThat(plan.mergePhase().projections().get(0), instanceOf(MergeCountProjection.class));
+        assertThat(plan.mergePhase().projections()).hasSize(1);
+        assertThat(plan.mergePhase().projections().get(0)).isExactlyInstanceOf(MergeCountProjection.class);
     }
 
     @Test
@@ -734,12 +716,12 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
 
         QueryThenFetch qtf = e.plan("select * from users limit 2147483647 ");
         Merge merge = (Merge) qtf.subPlan();
-        assertThat(merge.mergePhase().nodeIds().size(), is(1));
+        assertThat(merge.mergePhase().nodeIds()).hasSize(1);
         String localNodeId = merge.mergePhase().nodeIds().iterator().next();
         NodeOperationTree operationTree = NodeOperationTreeGenerator.fromPlan(merge, localNodeId);
         NodeOperation nodeOperation = operationTree.nodeOperations().iterator().next();
         // paging -> must not use direct response
-        assertThat(nodeOperation.downstreamNodes(), not(contains(ExecutionPhase.DIRECT_RESPONSE)));
+        assertThat(nodeOperation.downstreamNodes()).doesNotContain(ExecutionPhase.DIRECT_RESPONSE);
 
 
         qtf = e.plan("select * from users limit 2");
@@ -748,7 +730,7 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
         operationTree = NodeOperationTreeGenerator.fromPlan(merge, localNodeId);
         nodeOperation = operationTree.nodeOperations().iterator().next();
         // no paging -> can use direct response
-        assertThat(nodeOperation.downstreamNodes(), contains(ExecutionPhase.DIRECT_RESPONSE));
+        assertThat(nodeOperation.downstreamNodes()).containsExactly(ExecutionPhase.DIRECT_RESPONSE);
     }
 
     @Test
@@ -765,14 +747,12 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
         Merge merge = e.plan("select sum(profit) from gc_table");
         Collect collect = (Collect) merge.subPlan();
         List<Projection> projections = collect.collectPhase().projections();
-        assertThat(projections, contains(
-            instanceOf(AggregationProjection.class) // iter-partial on shard level
-        ));
-        assertThat(
-            merge.mergePhase().projections(),
-            contains(instanceOf(AggregationProjection.class))
+        assertThat(projections).satisfiesExactly(
+            p -> assertThat(p).isExactlyInstanceOf(AggregationProjection.class) // iter-partial on shard level
         );
-        Asserts.assertThat(((AggregationProjection)projections.get(0)).aggregations().get(0).inputs().get(0))
+        assertThat(merge.mergePhase().projections()).satisfiesExactly(
+            p -> assertThat(p).isExactlyInstanceOf(AggregationProjection.class));
+        assertThat(((AggregationProjection)projections.get(0)).aggregations().get(0).inputs().get(0))
             .isSQL("INPUT(0)");
     }
 
@@ -784,40 +764,40 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
 
         Merge plan = e.plan("select count(*) from users t1, users t2, users t3 " +
                             "where t1.id = t2.id and t2.id = t3.id");
-        assertThat(plan.subPlan(), instanceOf(Join.class));
+        assertThat(plan.subPlan()).isExactlyInstanceOf(Join.class);
         Join outerNL = (Join)plan.subPlan();
-        Asserts.assertThat(outerNL.joinPhase().joinCondition()).isSQL("(INPUT(1) = INPUT(2))");
-        assertThat(outerNL.joinPhase().projections().size(), is(2));
-        assertThat(outerNL.joinPhase().projections().get(0), instanceOf(EvalProjection.class));
-        assertThat(outerNL.joinPhase().projections().get(1), instanceOf(AggregationProjection.class));
-        assertThat(outerNL.joinPhase().outputTypes().size(), is(1));
-        assertThat(outerNL.joinPhase().outputTypes().get(0), is(CountAggregation.LongStateType.INSTANCE));
+        assertThat(outerNL.joinPhase().joinCondition()).isSQL("(INPUT(1) = INPUT(2))");
+        assertThat(outerNL.joinPhase().projections()).hasSize(2);
+        assertThat(outerNL.joinPhase().projections().get(0)).isExactlyInstanceOf(EvalProjection.class);
+        assertThat(outerNL.joinPhase().projections().get(1)).isExactlyInstanceOf(AggregationProjection.class);
+        assertThat(outerNL.joinPhase().outputTypes()).hasSize(1);
+        assertThat(outerNL.joinPhase().outputTypes().get(0)).isEqualTo(CountAggregation.LongStateType.INSTANCE);
 
         Join innerNL = (Join) outerNL.left();
-        Asserts.assertThat(innerNL.joinPhase().joinCondition()).isSQL("(INPUT(0) = INPUT(1))");
-        assertThat(innerNL.joinPhase().projections().size(), is(1));
-        assertThat(innerNL.joinPhase().projections().get(0), instanceOf(EvalProjection.class));
-        assertThat(innerNL.joinPhase().outputTypes().size(), is(2));
-        assertThat(innerNL.joinPhase().outputTypes().get(0), is(DataTypes.LONG));
+        assertThat(innerNL.joinPhase().joinCondition()).isSQL("(INPUT(0) = INPUT(1))");
+        assertThat(innerNL.joinPhase().projections()).hasSize(1);
+        assertThat(innerNL.joinPhase().projections().get(0)).isExactlyInstanceOf(EvalProjection.class);
+        assertThat(innerNL.joinPhase().outputTypes()).hasSize(2);
+        assertThat(innerNL.joinPhase().outputTypes().get(0)).isEqualTo(DataTypes.LONG);
 
         plan = e.plan("select count(t1.other_id) from users t1, users t2, users t3 " +
                       "where t1.id = t2.id and t2.id = t3.id");
-        assertThat(plan.subPlan(), instanceOf(Join.class));
+        assertThat(plan.subPlan()).isExactlyInstanceOf(Join.class);
         outerNL = (Join)plan.subPlan();
-        Asserts.assertThat(outerNL.joinPhase().joinCondition()).isSQL("(INPUT(2) = INPUT(3))");
-        assertThat(outerNL.joinPhase().projections().size(), is(2));
-        assertThat(outerNL.joinPhase().projections().get(0), instanceOf(EvalProjection.class));
-        assertThat(outerNL.joinPhase().projections().get(1), instanceOf(AggregationProjection.class));
-        assertThat(outerNL.joinPhase().outputTypes().size(), is(1));
-        assertThat(outerNL.joinPhase().outputTypes().get(0), is(CountAggregation.LongStateType.INSTANCE));
+        assertThat(outerNL.joinPhase().joinCondition()).isSQL("(INPUT(2) = INPUT(3))");
+        assertThat(outerNL.joinPhase().projections()).hasSize(2);
+        assertThat(outerNL.joinPhase().projections().get(0)).isExactlyInstanceOf(EvalProjection.class);
+        assertThat(outerNL.joinPhase().projections().get(1)).isExactlyInstanceOf(AggregationProjection.class);
+        assertThat(outerNL.joinPhase().outputTypes()).hasSize(1);
+        assertThat(outerNL.joinPhase().outputTypes().get(0)).isEqualTo(CountAggregation.LongStateType.INSTANCE);
 
         innerNL = (Join) outerNL.left();
-        Asserts.assertThat(innerNL.joinPhase().joinCondition()).isSQL("(INPUT(1) = INPUT(2))");
-        assertThat(innerNL.joinPhase().projections().size(), is(1));
-        assertThat(innerNL.joinPhase().projections().get(0), instanceOf(EvalProjection.class));
-        assertThat(innerNL.joinPhase().outputTypes().size(), is(3));
-        assertThat(innerNL.joinPhase().outputTypes().get(0), is(DataTypes.LONG));
-        assertThat(innerNL.joinPhase().outputTypes().get(1), is(DataTypes.LONG));
+        assertThat(innerNL.joinPhase().joinCondition()).isSQL("(INPUT(1) = INPUT(2))");
+        assertThat(innerNL.joinPhase().projections()).hasSize(1);
+        assertThat(innerNL.joinPhase().projections().get(0)).isExactlyInstanceOf(EvalProjection.class);
+        assertThat(innerNL.joinPhase().outputTypes()).hasSize(3);
+        assertThat(innerNL.joinPhase().outputTypes().get(0)).isEqualTo(DataTypes.LONG);
+        assertThat(innerNL.joinPhase().outputTypes().get(1)).isEqualTo(DataTypes.LONG);
     }
 
     @Test
@@ -827,10 +807,10 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
             .build();
 
         Join nl = e.plan("select * from users t1, users t2 WHERE 1=2");
-        assertThat(nl.left(), instanceOf(Collect.class));
-        assertThat(nl.right(), instanceOf(Collect.class));
-        Asserts.assertThat(((RoutedCollectPhase)((Collect)nl.left()).collectPhase()).where()).isSQL("false");
-        Asserts.assertThat(((RoutedCollectPhase)((Collect)nl.right()).collectPhase()).where()).isSQL("false");
+        assertThat(nl.left()).isExactlyInstanceOf(Collect.class);
+        assertThat(nl.right()).isExactlyInstanceOf(Collect.class);
+        assertThat(((RoutedCollectPhase)((Collect)nl.left()).collectPhase()).where()).isSQL("false");
+        assertThat(((RoutedCollectPhase)((Collect)nl.right()).collectPhase()).where()).isSQL("false");
     }
 
     @Test
@@ -840,10 +820,10 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
             .build();
 
         Join outer = e.plan("select * from users t1, users t2, users t3 WHERE 1=2");
-        Asserts.assertThat(((RoutedCollectPhase)((Collect)outer.right()).collectPhase()).where()).isSQL("false");
+        assertThat(((RoutedCollectPhase)((Collect)outer.right()).collectPhase()).where()).isSQL("false");
         Join inner = (Join) outer.left();
-        Asserts.assertThat(((RoutedCollectPhase)((Collect)inner.left()).collectPhase()).where()).isLiteral(false);
-        Asserts.assertThat(((RoutedCollectPhase)((Collect)inner.right()).collectPhase()).where()).isLiteral(false);
+        assertThat(((RoutedCollectPhase)((Collect)inner.left()).collectPhase()).where()).isLiteral(false);
+        assertThat(((RoutedCollectPhase)((Collect)inner.right()).collectPhase()).where()).isLiteral(false);
     }
 
     @Test
@@ -853,10 +833,10 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
             .build();
 
         Join nl = e.plan("select count(*) from users t1, users t2 WHERE 1=2");
-        assertThat(nl.left(), instanceOf(Collect.class));
-        assertThat(nl.right(), instanceOf(Collect.class));
-        Asserts.assertThat(((RoutedCollectPhase)((Collect)nl.left()).collectPhase()).where()).isLiteral(false);
-        Asserts.assertThat(((RoutedCollectPhase)((Collect)nl.right()).collectPhase()).where()).isLiteral(false);
+        assertThat(nl.left()).isExactlyInstanceOf(Collect.class);
+        assertThat(nl.right()).isExactlyInstanceOf(Collect.class);
+        assertThat(((RoutedCollectPhase)((Collect)nl.left()).collectPhase()).where()).isLiteral(false);
+        assertThat(((RoutedCollectPhase)((Collect)nl.right()).collectPhase()).where()).isLiteral(false);
     }
 
     @Test
@@ -867,9 +847,9 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
 
         Join outer = e.plan("select count(*) from users t1, users t2, users t3 WHERE 1=2");
         Join inner = (Join) outer.left();
-        Asserts.assertThat(((RoutedCollectPhase)((Collect)outer.right()).collectPhase()).where()).isLiteral(false);
-        Asserts.assertThat(((RoutedCollectPhase)((Collect)inner.left()).collectPhase()).where()).isLiteral(false);
-        Asserts.assertThat(((RoutedCollectPhase)((Collect)inner.right()).collectPhase()).where()).isLiteral(false);
+        assertThat(((RoutedCollectPhase)((Collect)outer.right()).collectPhase()).where()).isLiteral(false);
+        assertThat(((RoutedCollectPhase)((Collect)inner.left()).collectPhase()).where()).isLiteral(false);
+        assertThat(((RoutedCollectPhase)((Collect)inner.right()).collectPhase()).where()).isLiteral(false);
     }
 
     @Test
@@ -883,9 +863,9 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
             .build();
 
         LogicalPlan plan = e.logicalPlan("select 1 from t_pk_part_generated where ts = 0");
-        assertThat(plan, isPlan(
+        assertThat(plan).isEqualTo(
             "Get[doc.t_pk_part_generated | 1 | DocKeys{0::bigint, 0::bigint} | ((ts = 0::bigint) AND (p AS date_trunc('day', ts) = 0::bigint))]"
-        ));
+        );
     }
 
     @Test
@@ -898,7 +878,7 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
         e.getSessionSettings().setHashJoinEnabled(true);
         Merge merge = e.plan("select t2.b, t1.a from t1 inner join t2 on t1.i = t2.i order by 1, 2");
         Join join = (Join) merge.subPlan();
-        assertThat(join.joinPhase().type(), is(ExecutionPhase.Type.HASH_JOIN));
+        assertThat(join.joinPhase().type()).isEqualTo(ExecutionPhase.Type.HASH_JOIN);
     }
 
     @Test
@@ -907,11 +887,11 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
             .build();
 
         LogicalPlan plan = e.logicalPlan("select unnest([1, 2])");
-        assertThat(plan, isPlan(
+        assertThat(plan).isEqualTo(
             "ProjectSet[unnest([1, 2])]\n" +
-            "  └ TableFunction[empty_row | [] | true]"));
+            "  └ TableFunction[empty_row | [] | true]");
         Symbol output = plan.outputs().get(0);
-        assertThat(output.valueType(), is(DataTypes.INTEGER));
+        assertThat(output.valueType()).isEqualTo(DataTypes.INTEGER);
     }
 
     @Test
@@ -920,10 +900,12 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
             .build();
 
         LogicalPlan plan = e.logicalPlan("select unnest([1, 2]) + 1");
-        assertThat(plan, isPlan(
-            "Eval[(unnest([1, 2]) + 1)]\n" +
-            "  └ ProjectSet[unnest([1, 2])]\n" +
-            "    └ TableFunction[empty_row | [] | true]"));
+        assertThat(plan).isEqualTo(
+            """
+            Eval[(unnest([1, 2]) + 1)]
+              └ ProjectSet[unnest([1, 2])]
+                └ TableFunction[empty_row | [] | true]
+            """);
     }
 
     @Test
@@ -943,10 +925,13 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
             .build();
 
         LogicalPlan plan = e.logicalPlan("select count(*), generate_series(1, 2) from users");
-        assertThat(plan, isPlan(
-            "Eval[count(*), pg_catalog.generate_series(1, 2)]\n" +
-            "  └ ProjectSet[pg_catalog.generate_series(1, 2), count(*)]\n" +
-            "    └ Count[doc.users | true]"));
+        assertThat(plan).isEqualTo(
+            """
+            Eval[count(*), pg_catalog.generate_series(1, 2)]
+              └ ProjectSet[pg_catalog.generate_series(1, 2), count(*)]
+                └ Count[doc.users | true]
+            """
+        );
     }
 
     @Test
@@ -956,11 +941,14 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
             .build();
 
         LogicalPlan plan = e.logicalPlan("select count(name), generate_series(1, count(name)) from users");
-        assertThat(plan, isPlan(
-            "Eval[count(name), pg_catalog.generate_series(1::bigint, count(name))]\n" +
-            "  └ ProjectSet[pg_catalog.generate_series(1::bigint, count(name)), count(name)]\n" +
-            "    └ HashAggregate[count(name)]\n" +
-            "      └ Collect[doc.users | [name] | true]"));
+        assertThat(plan).isEqualTo(
+            """
+            Eval[count(name), pg_catalog.generate_series(1::bigint, count(name))]
+              └ ProjectSet[pg_catalog.generate_series(1::bigint, count(name)), count(name)]
+                └ HashAggregate[count(name)]
+                  └ Collect[doc.users | [name] | true]
+            """
+        );
     }
 
     @Test
@@ -969,10 +957,13 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
             .build();
 
         LogicalPlan plan = e.logicalPlan("select unnest([1, 2]) from sys.nodes order by 1");
-        assertThat(plan, isPlan(
-            "OrderBy[unnest([1, 2]) ASC]\n" +
-            "  └ ProjectSet[unnest([1, 2])]\n" +
-            "    └ Collect[sys.nodes | [] | true]"));
+        assertThat(plan).isEqualTo(
+            """
+            OrderBy[unnest([1, 2]) ASC]
+              └ ProjectSet[unnest([1, 2])]
+                └ Collect[sys.nodes | [] | true]
+            """
+        );
     }
 
     @Test
@@ -983,13 +974,12 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
 
         Merge localMerge = e.plan("select sum(ints) OVER (partition by awesome) from users");
         Merge distMerge = (Merge) localMerge.subPlan();
-        assertThat(distMerge.nodeIds().size(), is(2));
-        assertThat(distMerge.mergePhase().projections(), contains(
-            instanceOf(WindowAggProjection.class),
-            instanceOf(EvalProjection.class)
-        ));
+        assertThat(distMerge.nodeIds()).hasSize(2);
+        assertThat(distMerge.mergePhase().projections()).satisfiesExactly(
+            p -> assertThat(p).isExactlyInstanceOf(WindowAggProjection.class),
+            p -> assertThat(p).isExactlyInstanceOf(EvalProjection.class));
         Collect collect = (Collect) distMerge.subPlan();
-        assertThat(collect.nodeIds().size(), is(2));
+        assertThat(collect.nodeIds()).hasSize(2);
     }
 
     @Test
@@ -1021,9 +1011,9 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
 
         String statement = "select * from (select * from parted) t where date is null";
         LogicalPlan logicalPlan = e.logicalPlan(statement);
-        assertThat(logicalPlan, isPlan(
+        assertThat(logicalPlan).isEqualTo(
             "Rename[id, name, date, obj] AS t\n" +
-            "  └ Collect[doc.parted | [id, name, date, obj] | (date IS NULL)]"));
+            "  └ Collect[doc.parted | [id, name, date, obj] | (date IS NULL)]");
         ExecutionPlan plan = e.plan(statement);
         Collect collect = plan instanceof Collect ? (Collect) plan : ((Collect) ((Merge) plan).subPlan());
         RoutedCollectPhase routedCollectPhase = (RoutedCollectPhase) collect.collectPhase();
@@ -1032,7 +1022,7 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
         for (String node : routedCollectPhase.routing().nodes()) {
             numShards += routedCollectPhase.routing().numShards(node);
         }
-        assertThat(numShards, is(1));
+        assertThat(numShards).isEqualTo(1);
     }
 
     @Test
@@ -1043,7 +1033,7 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
 
         Merge merge = e.plan("select name from users as u where match(u.text, 'yalla') order by 1");
         Collect collect = (Collect) merge.subPlan();
-        Asserts.assertThat(((RoutedCollectPhase) collect.collectPhase()).where()).isFunction("match");
+        assertThat(((RoutedCollectPhase) collect.collectPhase()).where()).isFunction("match");
     }
 
     @Test
@@ -1058,9 +1048,9 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
 
         String stmt = "select distinct name from users limit 1";
         LogicalPlan plan = e.logicalPlan(stmt);
-        assertThat(plan, isPlan(
+        assertThat(plan).isEqualTo(
             "LimitDistinct[1::bigint;0 | [name]]\n" +
-            "  └ Collect[doc.users | [name] | true]"));
+            "  └ Collect[doc.users | [name] | true]");
     }
 
     @Test
@@ -1071,9 +1061,9 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
 
         String stmt = "select id, name from users group by id, name limit 1";
         LogicalPlan plan = e.logicalPlan(stmt);
-        assertThat(plan, isPlan(
+        assertThat(plan).isEqualTo(
             "LimitDistinct[1::bigint;0 | [id, name]]\n" +
-            "  └ Collect[doc.users | [id, name] | true]"));
+            "  └ Collect[doc.users | [id, name] | true]");
     }
 
     @Test
@@ -1084,26 +1074,18 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
 
         String stmt = "select id, name from users group by id, name limit 1 offset 3";
         LogicalPlan plan = e.logicalPlan(stmt);
-        assertThat(plan, isPlan(
+        assertThat(plan).isEqualTo(
             "LimitDistinct[1::bigint;3::bigint | [id, name]]\n" +
-            "  └ Collect[doc.users | [id, name] | true]"));
+            "  └ Collect[doc.users | [id, name] | true]");
 
         Merge merge = e.plan(stmt);
         List<Projection> collectProjections = ((Collect) merge.subPlan()).collectPhase().projections();;
-        assertThat(
-            collectProjections,
-            contains(
-                instanceOf(LimitDistinctProjection.class)
-            )
-        );
+        assertThat(collectProjections).satisfiesExactly(
+            p -> assertThat(p).isExactlyInstanceOf(LimitDistinctProjection.class));
         List<Projection> mergeProjections = merge.mergePhase().projections();
-        assertThat(
-            mergeProjections,
-            contains(
-                instanceOf(LimitDistinctProjection.class),
-                instanceOf(LimitAndOffsetProjection.class)
-            )
-        );
+        assertThat(mergeProjections).satisfiesExactly(
+            p -> assertThat(p).isExactlyInstanceOf(LimitDistinctProjection.class),
+            p -> assertThat(p).isExactlyInstanceOf(LimitAndOffsetProjection.class));
     }
 
     @Test
@@ -1114,10 +1096,13 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
 
         String stmt = "SELECT address['postcode'] FROM (SELECT address FROM users) AS u GROUP BY 1";
         LogicalPlan plan = e.logicalPlan(stmt);
-        assertThat(plan, isPlan(
-            "GroupHashAggregate[address['postcode']]\n" +
-            "  └ Rename[address] AS u\n" +
-            "    └ Collect[doc.users | [address] | true]"));
+        assertThat(plan).isEqualTo(
+            """
+            GroupHashAggregate[address['postcode']]
+              └ Rename[address] AS u
+                └ Collect[doc.users | [address] | true]
+            """
+        );
     }
 
     @Test
@@ -1128,18 +1113,20 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
 
         String stmt = "SELECT address['postcode'] FROM (SELECT address FROM users) AS u ORDER BY 1";
         LogicalPlan plan = e.logicalPlan(stmt);
-        assertThat(plan, isPlan(
-            "Eval[address['postcode']]\n" +
-            "  └ OrderBy[address['postcode'] ASC]\n" +
-            "    └ Rename[address] AS u\n" +
-            "      └ Collect[doc.users | [address] | true]"));
+        assertThat(plan).isEqualTo(
+            """
+            Eval[address['postcode']]
+              └ OrderBy[address['postcode'] ASC]
+                └ Rename[address] AS u
+                  └ Collect[doc.users | [address] | true]
+            """
+        );
         Merge merge = e.plan(stmt);
         Collect collect = (Collect) merge.subPlan();
         RoutedCollectPhase collectPhase = (RoutedCollectPhase) collect.collectPhase();
-        assertThat(collectPhase.projections(), contains(
-            instanceOf(OrderedLimitAndOffsetProjection.class),
-            instanceOf(EvalProjection.class)
-        ));
+        assertThat(collectPhase.projections()).satisfiesExactly(
+            p -> assertThat(p).isExactlyInstanceOf(OrderedLimitAndOffsetProjection.class),
+            p -> assertThat(p).isExactlyInstanceOf(EvalProjection.class));
     }
 
     @Test
@@ -1157,12 +1144,14 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
                       "   AND (false)";
         LogicalPlan plan = e.logicalPlan(stmt);
         String expectedPlan =
-            "NestedLoopJoin[CROSS]\n" +
-            "  ├ Rename[nspacl, nspname, nspowner, oid] AS n\n" +
-            "  │  └ Collect[pg_catalog.pg_namespace | [nspacl, nspname, nspowner, oid] | false]\n" +
-            "  └ Rename[] AS c\n" +
-            "    └ Collect[pg_catalog.pg_class | [] | false]";
-        assertThat(plan, isPlan(expectedPlan));
+            """
+            NestedLoopJoin[CROSS]
+              ├ Rename[nspacl, nspname, nspowner, oid] AS n
+              │  └ Collect[pg_catalog.pg_namespace | [nspacl, nspname, nspowner, oid] | false]
+              └ Rename[] AS c
+                └ Collect[pg_catalog.pg_class | [] | false]
+            """;
+        assertThat(plan).isEqualTo(expectedPlan);
     }
 
     @Test
@@ -1174,19 +1163,23 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
         // because it is not using the InputFactory to evaluate the order by expressions
         // Injecting an Eval operator as a workaround
         String stmt =
-            "SELECT\n" +
-            "   unnest,\n" +
-            "   sum(unnest) OVER(ORDER BY power(unnest, 2) RANGE BETWEEN 3 PRECEDING and CURRENT ROW)\n" +
-            "FROM\n" +
-            "   unnest(ARRAY[2.5, 4, 5, 6, 7.5, 8.5, 10, 12]) as t(unnest)";
+            """
+            SELECT
+               unnest,
+               sum(unnest) OVER(ORDER BY power(unnest, 2) RANGE BETWEEN 3 PRECEDING and CURRENT ROW)
+            FROM
+               unnest(ARRAY[2.5, 4, 5, 6, 7.5, 8.5, 10, 12]) as t(unnest)
+            """;
         LogicalPlan plan = e.logicalPlan(stmt);
         String expectedPlan =
-            "Eval[unnest, sum(unnest) OVER (ORDER BY power(unnest, 2.0) ASC RANGE BETWEEN 3 PRECEDING AND CURRENT ROW)]\n" +
-            "  └ WindowAgg[unnest, power(unnest, 2.0), sum(unnest) OVER (ORDER BY power(unnest, 2.0) ASC RANGE BETWEEN 3 PRECEDING AND CURRENT ROW)]\n" +
-            "    └ Eval[unnest, power(unnest, 2.0)]\n" +
-            "      └ Rename[unnest] AS t\n" +
-            "        └ TableFunction[unnest | [unnest] | true]";
-        assertThat(plan, isPlan(expectedPlan));
+            """
+            Eval[unnest, sum(unnest) OVER (ORDER BY power(unnest, 2.0) ASC RANGE BETWEEN 3 PRECEDING AND CURRENT ROW)]
+              └ WindowAgg[unnest, power(unnest, 2.0), sum(unnest) OVER (ORDER BY power(unnest, 2.0) ASC RANGE BETWEEN 3 PRECEDING AND CURRENT ROW)]
+                └ Eval[unnest, power(unnest, 2.0)]
+                  └ Rename[unnest] AS t
+                    └ TableFunction[unnest | [unnest] | true]
+            """;
+        assertThat(plan).isEqualTo(expectedPlan);
     }
 
     @Test
@@ -1201,11 +1194,13 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
             "ORDER BY 1";
         LogicalPlan plan = e.logicalPlan(stmt);
         String expectedPlan =
-            "Eval[word]\n" +
-            "  └ OrderBy[word ASC]\n" +
-            "    └ Filter[(catcode = 'R')]\n" +
-            "      └ TableFunction[pg_get_keywords | [word, catcode] | true]";
-        assertThat(plan, isPlan(expectedPlan));
+            """
+            Eval[word]
+              └ OrderBy[word ASC]
+                └ Filter[(catcode = 'R')]
+                  └ TableFunction[pg_get_keywords | [word, catcode] | true]
+            """;
+        assertThat(plan).isEqualTo(expectedPlan);
     }
 
     @Test
@@ -1219,15 +1214,13 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
         String expectedPlan =
             "GroupHashAggregate[name | count(*)]\n" +
             "  └ Get[doc.users | name | DocKeys{1::bigint; 2::bigint; 3::bigint; 4::bigint; 5::bigint} | (id = ANY([1::bigint, 2::bigint, 3::bigint, 4::bigint, 5::bigint]))]";
-        assertThat(logicalPlan, isPlan(expectedPlan));
+        assertThat(logicalPlan).isEqualTo(expectedPlan);
         Merge coordinatorMerge = e.plan(stmt);
         Merge distributedMerge = (Merge) coordinatorMerge.subPlan();
         Collect collect = (Collect) distributedMerge.subPlan();
-        assertThat(
-            collect.collectPhase().projections(),
-            contains(instanceOf(GroupProjection.class))
-        );
-        assertThat(collect.collectPhase().projections().get(0).requiredGranularity(), is(RowGranularity.SHARD));
+        assertThat(collect.collectPhase().projections()).satisfiesExactly(
+            p -> assertThat(p).isExactlyInstanceOf(GroupProjection.class));
+        assertThat(collect.collectPhase().projections().get(0).requiredGranularity()).isEqualTo(RowGranularity.SHARD);
     }
 
     @Test
@@ -1239,11 +1232,13 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
         String stmt = "SELECT count(id) as cnt FROM users GROUP BY name ORDER BY count(id) DESC";
         LogicalPlan plan = e.logicalPlan(stmt);
         String expectedPlan =
-            "Eval[count(id) AS cnt]\n" +
-            "  └ OrderBy[count(id) DESC]\n" +
-            "    └ GroupHashAggregate[name | count(id)]\n" +
-            "      └ Collect[doc.users | [id, name] | true]";
-        assertThat(plan, isPlan(expectedPlan));
+            """
+            Eval[count(id) AS cnt]
+              └ OrderBy[count(id) DESC]
+                └ GroupHashAggregate[name | count(id)]
+                  └ Collect[doc.users | [id, name] | true]
+            """;
+        assertThat(plan).isEqualTo(expectedPlan);
     }
 
 
@@ -1256,13 +1251,15 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
         String stmt = "SELECT u1.name FROM users u1 JOIN users u2 ON (u1.name || ?) = u2.name";
         LogicalPlan plan = e.logicalPlan(stmt);
         String expectedPlan =
-            "Eval[name]\n" +
-            "  └ HashJoin[(name = concat(name, $1))]\n" +
-            "    ├ Rename[name] AS u1\n" +
-            "    │  └ Collect[doc.users | [name] | true]\n" +
-            "    └ Rename[name] AS u2\n" +
-            "      └ Collect[doc.users | [name] | true]";
-        assertThat(plan, isPlan(expectedPlan));
+            """
+            Eval[name]
+              └ HashJoin[(name = concat(name, $1))]
+                ├ Rename[name] AS u1
+                │  └ Collect[doc.users | [name] | true]
+                └ Rename[name] AS u2
+                  └ Collect[doc.users | [name] | true]
+            """;
+        assertThat(plan).isEqualTo(expectedPlan);
 
         // this must not fail
         e.plan(stmt, UUID.randomUUID(), 0, new RowN("foo"));
@@ -1277,13 +1274,15 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
         String stmt = "SELECT u1.name FROM users u1 JOIN users u2 ON (u1.name || ?) != u2.name";
         LogicalPlan plan = e.logicalPlan(stmt);
         String expectedPlan =
-            "Eval[name]\n" +
-            "  └ NestedLoopJoin[INNER | (NOT (name = concat(name, $1)))]\n" +
-            "    ├ Rename[name] AS u1\n" +
-            "    │  └ Collect[doc.users | [name] | true]\n" +
-            "    └ Rename[name] AS u2\n" +
-            "      └ Collect[doc.users | [name] | true]";
-        assertThat(plan, isPlan(expectedPlan));
+            """
+            Eval[name]
+              └ NestedLoopJoin[INNER | (NOT (name = concat(name, $1)))]
+                ├ Rename[name] AS u1
+                │  └ Collect[doc.users | [name] | true]
+                └ Rename[name] AS u2
+                  └ Collect[doc.users | [name] | true]
+            """;
+        assertThat(plan).isEqualTo(expectedPlan);
 
         // this must not fail
         e.plan(stmt, UUID.randomUUID(), 0, new RowN("foo"));
@@ -1305,16 +1304,16 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
             "   ON (v1.a = v2.b) ";
         LogicalPlan plan = e.logicalPlan(stmt);
         String expectedPlan =
-            "HashJoin[(a = b)]\n" +
-            "  ├ Rename[a] AS v1\n" +
-            "  │  └ Eval[a]\n" +
-            "  │    └ Rename[a] AS a1\n" +
-            "  │      └ Collect[doc.t1 | [a] | true]\n" +
-            "  └ Rename[b] AS v2\n" +
-            "    └ Eval[b]\n" +
-            "      └ Rename[b] AS a2\n" +
-            "        └ Collect[doc.t2 | [b] | true]";
-        assertThat(plan, isPlan(expectedPlan));
+            """
+            HashJoin[(a = b)]
+              ├ Rename[a] AS v1
+              │  └ Rename[a] AS a1
+              │    └ Collect[doc.t1 | [a] | true]
+              └ Rename[b] AS v2
+                └ Rename[b] AS a2
+                  └ Collect[doc.t2 | [b] | true]
+            """;
+        assertThat(plan).isEqualTo(expectedPlan);
     }
 
     @Test
@@ -1332,16 +1331,16 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
             "   ON (v1.a > v2.b) ";
         LogicalPlan plan = e.logicalPlan(stmt);
         String expectedPlan =
-            "NestedLoopJoin[INNER | (a > b)]\n" +
-            "  ├ Rename[a] AS v1\n" +
-            "  │  └ Eval[a]\n" +
-            "  │    └ Rename[a] AS a1\n" +
-            "  │      └ Collect[doc.t1 | [a] | true]\n" +
-            "  └ Rename[b] AS v2\n" +
-            "    └ Eval[b]\n" +
-            "      └ Rename[b] AS a2\n" +
-            "        └ Collect[doc.t2 | [b] | true]";
-        assertThat(plan, isPlan(expectedPlan));
+            """
+            NestedLoopJoin[INNER | (a > b)]
+              ├ Rename[a] AS v1
+              │  └ Rename[a] AS a1
+              │    └ Collect[doc.t1 | [a] | true]
+              └ Rename[b] AS v2
+                └ Rename[b] AS a2
+                  └ Collect[doc.t2 | [b] | true]
+            """;
+        assertThat(plan).isEqualTo(expectedPlan);
     }
 
     @Test
@@ -1360,19 +1359,16 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
         LogicalPlan plan = e.logicalPlan(stmt);
         String expectedPlan =
             "Collect[doc.parted_by_generated | [ts, p AS date_trunc('month', ts)] | (ts >= 1580515200000::bigint)]";
-        assertThat(plan, isPlan(expectedPlan));
+        assertThat(plan).isEqualTo(expectedPlan);
 
         Collect collect = (Collect) ((Merge) e.plan(stmt)).subPlan();;
         RoutedCollectPhase routedCollectPhase = (RoutedCollectPhase) collect.collectPhase();
         Symbol where = routedCollectPhase.where();
-        Asserts.assertThat(where).isSQL("(doc.parted_by_generated.ts >= 1580515200000::bigint)");
+        assertThat(where).isSQL("(doc.parted_by_generated.ts >= 1580515200000::bigint)");
         assertThat(routedCollectPhase.routing().locations().values().stream()
             .flatMap(x -> x.keySet().stream())
-            .collect(Collectors.toSet()),
-            contains(
-                ".partitioned.parted_by_generated.04732d9o60qj2d9i60o30c1g"
-            )
-        );
+            .collect(Collectors.toSet())).containsExactly(
+                ".partitioned.parted_by_generated.04732d9o60qj2d9i60o30c1g");
     }
 
     @Test
@@ -1381,11 +1377,9 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
             .addTable(TableDefinitions.USER_TABLE_DEFINITION)
             .build();
 
-        assertThrowsMatches(
-            () -> e.plan("select id from users where id = 1 and _seq_no = 11"),
-            VersioningValidationException.class,
-            VersioningValidationException.SEQ_NO_AND_PRIMARY_TERM_USAGE_MSG
-        );
+        assertThatThrownBy(() -> e.plan("select id from users where id = 1 and _seq_no = 11"))
+            .isExactlyInstanceOf(VersioningValidationException.class)
+            .hasMessageContaining(VersioningValidationException.SEQ_NO_AND_PRIMARY_TERM_USAGE_MSG);
     }
 
     @Test
@@ -1394,11 +1388,9 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
             .addTable(TableDefinitions.USER_TABLE_DEFINITION)
             .build();
 
-        assertThrowsMatches(
-            () -> e.plan("select id from users where _seq_no = 11 and _primary_term = 1"),
-            VersioningValidationException.class,
-            VersioningValidationException.SEQ_NO_AND_PRIMARY_TERM_USAGE_MSG
-        );
+        assertThatThrownBy(() -> e.plan("select id from users where _seq_no = 11 and _primary_term = 1"))
+            .isExactlyInstanceOf(VersioningValidationException.class)
+            .hasMessageContaining(VersioningValidationException.SEQ_NO_AND_PRIMARY_TERM_USAGE_MSG);
     }
 
 
@@ -1420,13 +1412,12 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
             """);
         Collect collect = (Collect) merge.subPlan();
         var pkLookup = (PKLookupPhase) collect.collectPhase();
-        assertThat(pkLookup.projections(), Matchers.contains(
-            Matchers.instanceOf(FilterProjection.class),
-            Matchers.instanceOf(EvalProjection.class),
-            Matchers.instanceOf(AggregationProjection.class)
-        ));
+        assertThat(pkLookup.projections()).satisfiesExactly(
+            p -> assertThat(p).isExactlyInstanceOf(FilterProjection.class),
+            p -> assertThat(p).isExactlyInstanceOf(EvalProjection.class),
+            p -> assertThat(p).isExactlyInstanceOf(AggregationProjection.class));
         for (var projection : pkLookup.projections()) {
-            assertThat(projection.requiredGranularity(), is(RowGranularity.SHARD));
+            assertThat(projection.requiredGranularity()).isEqualTo(RowGranularity.SHARD);
         }
     }
 
@@ -1437,7 +1428,7 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
             .build();
 
         CountPlan plan = e.plan("select count(*) from tbl where 'a' = ANY(xs)");
-        Asserts.assertThat(plan.countPhase().where()).isSQL("(_cast('a', 'text(1)') = ANY(doc.tbl.xs))");
+        assertThat(plan.countPhase().where()).isSQL("(_cast('a', 'text(1)') = ANY(doc.tbl.xs))");
     }
 
     @Test
@@ -1453,7 +1444,7 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
             .flatMap(x -> x.values().stream())
             .mapToInt(x -> x.size())
             .sum();
-        assertThat(numShards, is(1));
+        assertThat(numShards).isEqualTo(1);
     }
 
     @Test
@@ -1466,7 +1457,7 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
         Collect collect = e.plan(stmt);
         RoutedCollectPhase routedCollectPhase = (RoutedCollectPhase) collect.collectPhase();
 
-        Asserts.assertThat(routedCollectPhase.where()).isLiteral(true);
+        assertThat(routedCollectPhase.where()).isLiteral(true);
     }
 
     @Test
@@ -1475,9 +1466,9 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
         String stmt = "SELECT UNNEST(?)";
         Collect collect = e.plan(stmt, UUID.randomUUID(), 0, new RowN(new Object[] {null}));
 
-        assertThat(collect.collectPhase().projections().get(0).projectionType(), is(ProjectionType.PROJECT_SET));
+        assertThat(collect.collectPhase().projections().get(0).projectionType()).isEqualTo(ProjectionType.PROJECT_SET);
         ProjectSetProjection projectSetProjection = (ProjectSetProjection) collect.collectPhase().projections().get(0);
-        Asserts.assertThat(((Function) projectSetProjection.tableFunctions().get(0)).arguments().get(0))
+        assertThat(((Function) projectSetProjection.tableFunctions().get(0)).arguments().get(0))
             .isLiteral(null); // used to be unbound ParameterSymbol
     }
 
@@ -1495,7 +1486,7 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
         var subSelectPlan = e.logicalPlan(
                 "SELECT * FROM (SELECT x FROM (SELECT x FROM t1) AS r) AS s");
 
-        assertThat(withPlan, isPlan(subSelectPlan));
+        assertThat(withPlan).isEqualTo(subSelectPlan);
     }
 
     @Test
@@ -1515,6 +1506,6 @@ public class SelectPlannerTest extends CrateDummyClusterServiceUnitTest {
                 " (SELECT * FROM t1) AS u," +
                 " (SELECT x FROM (SELECT x FROM t2) AS u) AS v");
 
-        assertThat(withPlan, isPlan(subSelectPlan));
+        assertThat(withPlan).isEqualTo(subSelectPlan);
     }
 }
